# mermkit

./: .eslintignore  .eslintrc.cjs  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.claude/: settings.local.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  mermkit-pr-comment.yml  release.yml
bindings/: README.md
bindings/go/: README.md  go.mod  render.go  render_test.go
bindings/python/: pyproject.toml
bindings/rust/: Cargo.toml  README.md
bindings/rust/src/: lib.rs
bindings/rust/tests/: integration.rs
docs/: README.md  adapters.md  agents.md  bindings.md  cli.md  releasing.md  rendering.md
examples/: README.md
examples/adapters/: README.md
examples/basic/: README.md  diagram.md  diagram.mmd  sequence.md  sequence.mmd
examples/custom-engine/: README.md  index.mjs
examples/strands-agent/: README.md  agent.py
scripts/: clean.mjs  mermkit-pr-comment.mjs  publish-crates.mjs  publish-npm.mjs  publish-pypi.mjs  release-prepare.mjs  sync-version.mjs
site/: index.html
tests/: adapters.test.mjs  ascii-fixtures.mjs  ascii.test.mjs  helpers.mjs  integration-cli.test.mjs  run.mjs  serve.test.mjs  wrappers.test.mjs
